[package]
name = "trickle-multistream"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/trickle-stellar/trickle-contracts"
description = "Trickle multi-recipient stream — split a single stream across multiple recipients"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
trickle-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
