[package]
name = "trickle-stream-nft"
version = "0.1.0"
edition = "2021"
publish = false
description = "Trickle stream NFT — transfer stream receivership as a Stellar custom asset"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
trickle-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
