[package]
name = "trickle-vesting"
version = "0.1.0"
edition = "2021"
publish = false
description = "Trickle vesting — time-locked token release with cliff and linear vesting"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
trickle-common = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
